fixed spacing of assignments

--- a/src/components/Assignments.css
+++ b/src/components/Assignments.css
@@ -22,16 +22,19 @@ body {
 .assignment-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 35px;
 }
 .assignment-list-div {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   background-color: var(--blue-medium);
   flex-wrap: wrap;
   padding-left: 20px;
   border-radius: 5px;
-  margin: 20px;
+  margin: 30px;
   border: 3px black solid;
   -webkit-box-shadow: 6px 9px 18px -3px rgba(0, 0, 0, 0.39);
   box-shadow: 6px 9px 18px -3px rgba(0, 0, 0, 0.39);
@@ -47,13 +50,21 @@ body {
 .assignment-list-div p {
   display: flex;
   text-align: left;
+  justify-content: left;
+  align-items: left;
+}
+
+.assignment-list-div h3 {
+  display: flex;
+  text-align: left;
+  padding: 10px;
 }
 
 .assignment-tile {
   text-decoration: none;
-  height: 200px;
-  width: 210px;
-  margin: 20px;
+  height: 280px;
+  width: 230px;
+  margin: 30px;
 }
 
 .assignment-tile:hover {
